<resources>
    <string name="app_name">ExtenseCalc</string>
    <string name="action_settings">Settings</string>

    <!--Error messages-->
    <string name="error_bad_request_msg">Connection error, please try again!</string>
    <string name="error_mail_password_not_valid">The email / password you entered is not valid</string>
    <string name="error_not_found">Todo</string>
    <string name="error_internal_server_msg">Internal server error, please try again!</string>
    <string name="error_service_unavailable_msg">Service is temporary not available, please try again!</string>
    <string name="error_time_out_msg">Time out, please try again!</string>
    <string name="error_unknown_msg">Unknown error, please try again!</string>
    <string name="error_offline_msg">You are not connected to the internet. Please check your connection!</string>
    <string name="error_in_use_msg">Your phone no. or email address are already in use</string>

    <!--Main view-->
    <string name="main_ab_setup">Set up your account</string>

    <!--Backup types-->
    <string name="backup_not_now">Not now</string>
    <string name="backup_drop_box">DropBox</string>
    <string name="backup_google_drive">Google Drive</string>
    <string name="backup_email">Email</string>

    <!--Setup view-->
    <string name="setup_name_hint">Your name</string>
    <string name="setup_currency_hint">Choose your currency</string>
    <string name="setup_backup_hint">Choose your backup type</string>
    <string name="setup_btn_start">Continue</string>
    <string name="setup_btn_add_income">Add income</string>
    <string name="setup_btn_add_expense">Add expense</string>
    <string name="setup_user_name_error">Your user name length needs to be between %1$d and %2$d chars.</string>

    <!--Add expense view-->
    <string name="expense_payment_rate">Select a rate</string>
    <string name="expense_money_type">Select a type</string>
    <string name="expense_money_amount">Set an amount</string>
    <string name="expense_hint">Amount</string>
    <string name="expense_description">Description</string>
    <string name="expense_btn_submit">Submit</string>
    <string name="expense_amount_error">The value needs to be greater 0!</string>

    <!--Home-->
    <string name="home_income">Income:</string>
    <string name="home_expense">Expense:</string>
    <string name="home_result">Sum:</string>

</resources>
