<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/setup_input_layout"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding">

        <EditText
            android:id="@+id/fragment_setup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setup_name_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@android:color/black"/>

    </android.support.design.widget.TextInputLayout>

    <TextView

        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:text="@string/setup_currency_hint"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>

    <Spinner
        android:id="@+id/spinner_currency"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_padding"/>

    <TextView
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:text="@string/setup_backup_hint"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>

    <Spinner
        android:id="@+id/spinner_backup"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_btn_add_income"
            android:textColor="@color/green"/>

        <Button
            android:id="@+id/btn_add_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_btn_add_expense"
            android:textColor="@color/red"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/setup_btn_start"/>

</LinearLayout>