<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:text="@string/expense_money_amount"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/expense_amount_input_layout"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding">

        <EditText
            android:id="@+id/expense_amount_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_hint"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:text="@string/expense_money_type"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>

    <Spinner
        android:id="@+id/spinner_money_type"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_padding"/>

    <TextView
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:text="@string/expense_payment_rate"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>

    <Spinner
        android:id="@+id/spinner_payment_rate"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_padding"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/expense_input_layout"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding">

        <EditText
            android:id="@+id/fragment_expense_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_description"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@android:color/black"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/setup_text_width"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/expense_btn_submit"/>

</LinearLayout>